# EasyLogs

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.devel.yaml  docker-compose.only-services.yaml  docker-compose.yaml  entrypoint.sh  requirements.freeze.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: upload-docker-image.yml
deployment/: gunicorn.conf.py
easy_logs/: TODO.md  app.py  cli.py  db.py  decorators.py  exceptions.py  settings.py  setup.py
easy_logs/auth/: __init__.py  bp_auth.py  forms.py  models.py  setup.py
easy_logs/auth/templates/login/: login.html
easy_logs/dashboard/: __init__.py  bp_dashboard.py  forms.py  jinja.py  models.py  setup.py
easy_logs/dashboard/templates/dashboard/: home.html
easy_logs/dashboard/templates/dashboard/macros/: python_http_handler.html
easy_logs/healt_check/: __init__.py  bp_health_check.py  setup.py
easy_logs/loggers/: db_aux.py  setup.py  signals.py
easy_logs/loggers/python/: __init__.py  forms.py  lumberjack_handler.py  models.py  python_http_handler.py
easy_logs/static/: manifest.json
easy_logs/static/css/: custom.css  sb-admin-2.css  sb-admin-2.min.css
easy_logs/static/js/: custom.js
easy_logs/static/js/loggers/: python-http-logger.js
easy_logs/templates/: _master.html  _master_center_content.html
easy_logs/templates/errors/: 40x.html  500.html  generic.html
easy_logs/templates/includes/: footer.html  navbar.html
examples/python/: python-http-handler.py
images/: social-github-image.afdesign
