[metadata]
name = easylogs
description = Simple and powerful dashboard for logs
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
author = Plak team
maintainer = Daniel Garcia (cr0hn)
maintainer_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/easylogs

[options]
zip_safe = True
include_package_data = True
packages = find:
